// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my account page handles submitting the form with an error 1`] = `
<Fragment>
  <header
    className="clearfix mb2 px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <AdminForm
    error="error message"
    legend="manage account details"
    onCancel={[Function]}
    onSave={[Function]}
    success={false}
    title="Manage account"
    working={false}
  >
    <TextField
      ariaLabel="please enter your full name"
      label="Name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Tina Belcher"
    />
    <TextField
      ariaLabel="please enter your 10-digit phone number"
      label="Phone number"
      mask="phone"
      name="phone"
      onChange={[Function]}
      size="medium"
      type="text"
      value="1-800-BURGERS"
    />
    <TextField
      ariaLabel="please enter your position or role ???"
      label="Role"
      name="position"
      onChange={[Function]}
      type="text"
      value="Table Cleaner"
    />
    <Password
      className="mb2"
      compareTo={Array []}
      onChange={[Function]}
      showMeter={false}
      title="Change password"
      value=""
    />
  </AdminForm>
</Fragment>
`;

exports[`my account page handles submitting the form with no error 1`] = `
<Fragment>
  <header
    className="clearfix mb2 px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <AdminForm
    error={false}
    legend="manage account details"
    onCancel={[Function]}
    onSave={[Function]}
    success="Changes saved"
    title="Manage account"
    working={false}
  >
    <TextField
      ariaLabel="please enter your full name"
      label="Name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Tina Belcher"
    />
    <TextField
      ariaLabel="please enter your 10-digit phone number"
      label="Phone number"
      mask="phone"
      name="phone"
      onChange={[Function]}
      size="medium"
      type="text"
      value="1-800-BURGERS"
    />
    <TextField
      ariaLabel="please enter your position or role ???"
      label="Role"
      name="position"
      onChange={[Function]}
      type="text"
      value="Table Cleaner"
    />
    <Password
      className="mb2"
      compareTo={Array []}
      onChange={[Function]}
      showMeter={false}
      title="Change password"
      value=""
    />
  </AdminForm>
</Fragment>
`;

exports[`my account page renders 1`] = `
<Fragment>
  <header
    className="clearfix mb2 px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <AdminForm
    error={false}
    legend="manage account details"
    onCancel={[Function]}
    onSave={[Function]}
    success={false}
    title="Manage account"
    working={false}
  >
    <TextField
      ariaLabel="please enter your full name"
      label="Name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Tina Belcher"
    />
    <TextField
      ariaLabel="please enter your 10-digit phone number"
      label="Phone number"
      mask="phone"
      name="phone"
      onChange={[Function]}
      size="medium"
      type="text"
      value="1-800-BURGERS"
    />
    <TextField
      ariaLabel="please enter your position or role ???"
      label="Role"
      name="position"
      onChange={[Function]}
      type="text"
      value="Table Cleaner"
    />
    <Password
      className="mb2"
      compareTo={Array []}
      onChange={[Function]}
      showMeter={false}
      title="Change password"
      value=""
    />
  </AdminForm>
</Fragment>
`;

exports[`my account page renders 2`] = `
<Fragment>
  <header
    className="clearfix mb2 px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <AdminForm
    error={false}
    legend="manage account details"
    onCancel={[Function]}
    onSave={[Function]}
    success={false}
    title="Manage account"
    working={false}
  >
    <TextField
      ariaLabel="please enter your full name"
      label="Name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Tina Belcher"
    />
    <TextField
      ariaLabel="please enter your 10-digit phone number"
      label="Phone number"
      mask="phone"
      name="phone"
      onChange={[Function]}
      size="medium"
      type="text"
      value="1-800-BURGERS"
    />
    <TextField
      ariaLabel="please enter your position or role ???"
      label="Role"
      name="position"
      onChange={[Function]}
      type="text"
      value="Window Washer"
    />
    <Password
      className="mb2"
      compareTo={Array []}
      onChange={[Function]}
      showMeter={false}
      title="Change password"
      value=""
    />
  </AdminForm>
</Fragment>
`;
